--- a/manifest.json
+++ b/manifest.json
@@ -2,21 +2,24 @@
     "name": "Финансовая Цель",
     "short_name": "Цель",
     "description": "Приложение для отслеживания финансовых целей",
-    "start_url": "/",
+    "start_url": "./index.html",
+    "scope": "./",
     "display": "standalone",
     "background_color": "#f5f7fa",
     "theme_color": "#4CAF50",
     "orientation": "portrait",
     "icons": [
         {
-            "src": "icon-192.png",
+            "src": "./icon-192.png",
             "sizes": "192x192",
-            "type": "image/png"
+            "type": "image/png",
+            "purpose": "any maskable"
         },
         {
-            "src": "icon-512.png",
+            "src": "./icon-512.png",
             "sizes": "512x512",
-            "type": "image/png"
+            "type": "image/png",
+            "purpose": "any maskable"
         }
     ]
 }
